# modules/dxp/apps/osb/osb-koroneiki/osb-koroneiki-phloem/osb-koroneiki-phloem-rest-api/src/main/java/com/liferay/osb/koroneiki/phloem/rest/dto/v1_0/util/AccountUtil.java
@@ -33,6 +33,7 @@ public class AccountUtil {
 			{
 				code = account.getCode();
 				contactEmailAddress = account.getContactEmailAddress();
+				dataRegion = DataRegion.create(account.getDataRegion());
 				dateCreated = account.getCreateDate();
 				dateModified = account.getModifiedDate();
 				description = account.getDescription();
