# modules/dxp/apps/osb/osb-koroneiki/osb-koroneiki-taproot/osb-koroneiki-taproot-service/src/main/java/com/liferay/osb/koroneiki/taproot/internal/search/spi/model/index/contributor/AccountModelDocumentContributor.java
@@ -108,6 +108,7 @@ public class AccountModelDocumentContributor
 		document.addText("code", account.getCode());
 		document.addKeyword(
 			"contactEmailAddress", account.getContactEmailAddress());
+		document.addKeyword("dataRegion", account.getDataRegion());
 		document.addKeyword("faxNumber", account.getFaxNumber());
 		document.addKeyword("internal", account.isInternal());
 		document.addKeyword("language", account.getLanguage());
