# modules/dxp/apps/osb/osb-koroneiki/osb-koroneiki-xylem/osb-koroneiki-xylem-distributed-messaging/src/main/java/com/liferay/osb/koroneiki/xylem/distributed/messaging/internal/rest/dto/util/AccountUtil.java
@@ -36,6 +36,7 @@ public class AccountUtil {
 					account.getAssignedTeams(), TeamUtil::toTeam, Team.class);
 				code = account.getCode();
 				contactEmailAddress = account.getContactEmailAddress();
+				dataRegion = DataRegion.create(account.getDataRegion());
 				dateCreated = account.getCreateDate();
 				dateModified = account.getModifiedDate();
 				description = account.getDescription();
